[project]
name = "dango"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "sakikuroe" }
]
dependencies = [
    "ruff>=0.1.11",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
